--- a/web/index.html
+++ b/web/index.html
@@ -34,5 +34,24 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyD7q3pOnlf768uEuqzMROoG23DBx4AcwI0",
+      authDomain: "classmates-web.firebaseapp.com",
+      projectId: "classmates-web",
+      storageBucket: "classmates-web.appspot.com",
+      messagingSenderId: "122346975611",
+      appId: "1:122346975611:web:b2aa28ac4fd8faa9b74dde"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
 </body>
 </html>
